--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Settings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Settings.razor
@@ -18,34 +18,37 @@
     <MudItem xs="4">
         <MudPaper Elevation="15" Class="pa-4 mud-height-full">
             <MudText Typo="Typo.h5">Settings 1</MudText>
+            <MudDivider Class="my-1" />
             <MudTextField @bind-Value="OverviewModel.Season.Year" Label="Year" ReadOnly="true" />
-            <MudTextField @bind-Value="OverviewModel.Season.MaximumDriversInRace" Label="MaximumDriversInRace" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.QualifyingFormat" Text="@($"{OverviewModel.Season.QualifyingFormat}")" Label="Qualifying format" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.QualifyingAmountQ2" Label="QualifyingAmountQ2" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.QualifyingAmountQ3" Label="QualifyingAmountQ3" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.QualifyingRNG" Label="QualifyingRNG" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.RunAmountSession" Label="RunAmountSession" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.GridBonus" Label="GridBonus" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.PointsPole" Label="PointsPole" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.PointsFastestLap" Label="PointsFastestLap" ReadOnly="true"></MudTextField>
+            <MudTextField @bind-Value="OverviewModel.Season.MaximumDriversInRace" Label="MaximumDriversInRace" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.QualifyingFormat" Text="@($"{OverviewModel.Season.QualifyingFormat}")" Label="Qualifying format" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.QualifyingAmountQ2" Label="QualifyingAmountQ2" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.QualifyingAmountQ3" Label="QualifyingAmountQ3" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.QualifyingRNG" Label="QualifyingRNG" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.RunAmountSession" Label="RunAmountSession" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.GridBonus" Label="GridBonus" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.PointsPole" Label="PointsPole" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.PointsFastestLap" Label="PointsFastestLap" ReadOnly="true" />
         </MudPaper>
     </MudItem>
     <MudItem xs="4">
         <MudPaper Elevation="15" Class="pa-4 mud-height-full">
             <MudText Typo="Typo.h5">Settings 2</MudText>
-            <MudTextField @bind-Value="OverviewModel.Season.RngMinimum" Label="RngMinimum" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.RngMaximum" Label="RngMaximum" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.PitMinimum" Label="PitMinimum" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.PitMaximum" Label="PitMaximum" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.PitCostSubtractCaution" Label="Subtract from pit when SC" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.MistakeMinimum" Label="MistakeMinimum" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.MistakeMaximum" Label="MistakeMaximum" ReadOnly="true"></MudTextField>
-            <MudTextField @bind-Value="OverviewModel.Season.MistakeRolls" Label="MistakeRolls" ReadOnly="true"></MudTextField>
+            <MudDivider Class="my-1" />
+            <MudTextField @bind-Value="OverviewModel.Season.RngMinimum" Label="RngMinimum" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.RngMaximum" Label="RngMaximum" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.PitMinimum" Label="PitMinimum" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.PitMaximum" Label="PitMaximum" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.PitCostSubtractCaution" Label="Subtract from pit when SC" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.MistakeMinimum" Label="MistakeMinimum" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.MistakeMaximum" Label="MistakeMaximum" ReadOnly="true" />
+            <MudTextField @bind-Value="OverviewModel.Season.MistakeRolls" Label="MistakeRolls" ReadOnly="true" />
         </MudPaper>
     </MudItem>
     <MudItem xs="4">
         <MudPaper Elevation="15" Class="pa-4 mud-height-full">
-        <MudText Typo="Typo.h5">Points per position</MudText>
+            <MudText Typo="Typo.h5">Points per position</MudText>
+            <MudDivider Class="my-1" />
             @if (OverviewModel.Season.PointAllotments?.Any() == true)
             {
                 <MudSimpleTable Dense="true">
