--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -421,6 +421,10 @@ th {
     font-family: var(--mud-typography-default-family);
 }
 
+.font-body1 {
+    font-family: var(--mud-typography-body1-family);
+}
+
 .font-button {
     font-family: var(--mud-typography-button-family);
 }
