--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/SeasonEngines.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/SeasonEngines.razor
@@ -15,14 +15,16 @@
     </MudPaper>
     <MudDataGrid T="SeasonEngine" Items="@OverviewModel.SeasonEngines" Dense="true">
         <Columns>
-            <PropertyColumn Property="e => e.Name" />
+            <PropertyColumn Property="e => e.Name" CellClass="font-body1" />
             <PropertyColumn Property="e => e.Power" CellClass="font-caption" />
             <PropertyColumn Property="e => e.Reliability" Title="REL" CellClass="font-caption" />
             <PropertyColumn Property="e => e.Rebadged" />
             <TemplateColumn T="SeasonEngine" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
-                        <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateItem(context.Item))" />
+                        <MudIconButton Size="Size.Small"
+                                       Icon="@Icons.Material.Outlined.Edit"
+                                       OnClick="@(() => UpdateItem(context.Item))" />
                     </MudButtonGroup>
                 </CellTemplate>
             </TemplateColumn>
@@ -31,11 +33,9 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter]
-    public OverviewModel OverviewModel { get; set; }
+    [CascadingParameter] public OverviewModel OverviewModel { get; set; }
 
-    [Parameter]
-    public EventCallback<SeasonEngine?> OnEditorOpen { get; set; }
+    [Parameter] public EventCallback<SeasonEngine?> OnEditorOpen { get; set; }
 
     private async Task AddItem() => await UpdateItem(null);
     private async Task UpdateItem(SeasonEngine? item)
