Refactored the driver comparison stat-checker to render graph per topic

--- a/SimTECH/SimTECH/Pages/Drivers/Dialogs/DriverDetailStat.razor
+++ b/SimTECH/SimTECH/Pages/Drivers/Dialogs/DriverDetailStat.razor
@@ -1,4 +1,6 @@
-﻿@inject LeagueService _leagueService
+﻿@using SimTECH.PageModels.Stats
+
+@inject LeagueService _leagueService
 @inject ResultService _resultService
 
 <MudDialog>
