--- a/SimTECH/SimTECH/Pages/RaceWeek/Dialogs/GapChartDialog.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Dialogs/GapChartDialog.razor
@@ -1,4 +1,6 @@
-﻿<MudDialog>
+﻿@using SimTECH.PageModels.Stats
+
+<MudDialog>
     <DialogContent>
         <MudPaper MinWidth="1500px" MinHeight="950px" Class="px-4 py-2" id="gapper-chart-container">
             <MudStack Row="true" AlignItems="AlignItems.Center" Class="px-0 pb-2">
