--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/ContractLengthRemaining.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/ContractLengthRemaining.razor
@@ -1,4 +1,6 @@
-﻿<MudDialog>
+﻿@using SimTECH.PageModels.Stats
+
+<MudDialog>
     <DialogContent>
         <MudContainer>
             <MudStack Row="true" AlignItems="AlignItems.Center" Class="px-0 pb-2">
