--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/WdcResultChart.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/WdcResultChart.razor
@@ -1,4 +1,6 @@
-﻿<MudDialog>
+﻿@using SimTECH.PageModels.Stats
+
+<MudDialog>
     <DialogContent>
         <MudPaper MinHeight="900px" MinWidth="1400px" id="wdc-chart-container">
             <MudStack Row="true" AlignItems="AlignItems.Center">
