--- a/SimTECH/SimTECH/Pages/Stats/Index.razor
+++ b/SimTECH/SimTECH/Pages/Stats/Index.razor
@@ -80,7 +80,7 @@
 </MudContainer>
 
 @code {
-    private List<StatTopic> Topics { get; set; } = StatisticTopicsBuilder.GetStatisticTopics;
+    private List<StatTopic> Topics { get; set; } = StatsDataBuilder.GetStatisticTopics;
     private List<League> Leagues { get; set; } = [];
 
     private bool Loading { get; set; } = true;
